hphp/test/zend/bad/ext/intl/tests/uconverter___construct_error.php
<?php
$c = new UConverter('utf-8', "\x80");
var_dump($c);